# q-root-alpha

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  fly.toml  pyproject.toml  railway.json  railway.toml  render.yaml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
backend/: .dockerignore  Dockerfile  main.py  requirements.txt  test_main.py
backend/q_route/cli/: __init__.py
backend/q_route/core/: distance_matrix.py  penalty_calculator.py
backend/q_route/models/: __init__.py
backend/q_route/solvers/: base_solver.py
backend/q_route/utils/: __init__.py  metrics.py
docs/: ALGORITHM_DOCUMENTATION.md  DEPLOYMENT.md  PRD.md  PROJECT_DOCUMENTATION.md  SYSTEM_DESIGN.md  TECHNOLOGY_STACK.md
examples/: medium_10_node.json  simple_5_node.json
frontend/: .dockerignore  .env.example  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  client.test.js
frontend/src/components/: Header.jsx  Header.test.jsx  MetricCard.jsx  MetricCard.test.jsx  ProblemForm.jsx  ProblemForm.test.jsx  ResultsPanel.jsx  ResultsPanel.test.jsx  RouteMap.jsx
frontend/src/test/: setup.js
frontend/src/test/mocks/: handlers.js  server.js
src/: data_gen.py  solver.py
src/q_route/: __init__.py
src/q_route/cli/: main.py
src/q_route/core/: __init__.py  qubo_builder.py
src/q_route/models/: problem.py  solution.py
src/q_route/solvers/: __init__.py  sa_solver.py
src/q_route/utils/: visualization.py
tests/: __init__.py  test_integration.py
